# redis_store

./: Dockerfile  LICENSE  README.md  compose.yml  docker-compose.yml  requirements.txt
.github/workflows/: docker-publish.yml
electricity/: .flaskenv  app.py  home_db.py  pyproject.toml  schemas.py
electricity/model/: home.py
electricity/resources/: home_energy.py
electricity/src/electricity_lkgjm/: Dockerfile  app.py  (+3 more)
energy_usage/: energy.py
energy_usage/test/: energy.py
helm/homechart/: Chart.yaml
helm/supply/: Chart.yaml
home/: README.md  pyproject.toml
home/electricity/: Dockerfile
home/helm/homechart/: Chart.yaml
home/helm/homechart/charts/electricitychart/: Chart.yaml  values.yaml
home/helm/homechart/charts/electricitychart/templates/: _helpers.tpl  deployment.yaml  service.yaml
home/helm/homechart/charts/redischart/: Chart.yaml  values.yaml
home/helm/homechart/charts/redischart/templates/: deployment.yaml  pv.yaml  pvc.yaml  service.yaml
home/redis/: home-app.yaml  redis-db.yaml  redis-namespace.yaml
home/src/: docker-compose.yml
home/src/docs/openapi/: openapi.json
home/src/electricity/: Dockerfile  home_db.py  requirements.txt
home/src/electricity/resources/: home_energy.py
home/src/homeMGBackCountry/: Dockerfile  app.py  home_db.py  requirements.txt  schemas.py
home/src/homeMGBackCountry/model/: home.py
home/src/homeMGBackCountry/resources/: electricity.py  home_api.py  inventory.py
home/src/test/: test_electricity.py
home/test/: test_electricity.py
redisdb/: docker-compose.yml
test/: test_electricity.py
(+15 files in other folders)
