[project]
name = "homeMGBackCountry"
version = "0.1.0"
authors = [
    { name="Gertjan van der Meulen", email="gertjan@hollands-groen.nl" },
]
description = "Store weekly electicity usage in a redis database"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"